--- a/public/sus.html
+++ b/public/sus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>osu!live</title>
+    <title>Suspicious Runs - osu!live</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,400;0,500;0,600;0,700;0,800;1,700&family=Varela+Round&display=swap" rel="stylesheet">
@@ -516,15 +516,14 @@
         <header>
             <div class="brand">
                 <h1>osu!live</h1>
-                <div class="subtitle"><span class="live-badge"></span> REAL-TIME FEED</div>
+                <div class="subtitle"><span class="live-badge"></span> SUSPICIOUS RUNS</div>
             </div>
 
             <div id="status-bar">
                 <div class="status-indicator">
                     <span class="status-dot"></span>
-                    <span id="status-text">Connected</span>
+                    <span id="status-text">Active</span>
                 </div>
-                <div id="connection-count" style="color: var(--text-muted)">● 1</div>
             </div>
         </header>
 
@@ -564,7 +563,6 @@
     <script>
         const socket = io();
         const feed = document.getElementById('feed');
-        const MAX_ITEMS = 50;
 
         const filters = {
             minPp: document.getElementById('min-pp'),
@@ -574,38 +572,31 @@
             map: document.getElementById('map-filter')
         };
 
-        const statusDot = document.querySelector('.status-dot');
-        const statusText = document.getElementById('status-text');
+        async function fetchSuspiciousScores() {
+            try {
+                const response = await fetch('/api/sus');
+                const scores = await response.json();
 
-        socket.on('connect', () => {
-            statusDot.style.backgroundColor = '#2ea043';
-            statusDot.style.boxShadow = '0 0 8px rgba(46, 160, 67, 0.5)';
-            statusText.textContent = 'Connected';
-            statusText.style.color = '#2ea043';
-        });
+                feed.innerHTML = '';
 
-        socket.on('disconnect', () => {
-            statusDot.style.backgroundColor = '#ef4444';
-            statusDot.style.boxShadow = '0 0 8px rgba(239, 68, 68, 0.5)';
-            statusText.textContent = 'Disconnected';
-            statusText.style.color = '#ef4444';
-        });
+                let orderedScores = [...scores].reverse();
 
-        socket.on('new_scores', (scores) => {
-            let orderedScores = [...scores].reverse();
-
-            if (orderedScores.length > MAX_ITEMS) {
-                orderedScores = orderedScores.slice(0, MAX_ITEMS);
+                orderedScores.forEach((score, index) => {
+                    setTimeout(() => {
+                        requestAnimationFrame(() => renderScore(score));
+                    }, index * 50);
+                });
+            } catch (error) {
+                console.error('Error fetching scores:', error);
             }
+        }
 
-            const delay = orderedScores.length > 5 ? 100 : 80;
-
-            orderedScores.forEach((score, index) => {
-                setTimeout(() => {
-                    requestAnimationFrame(() => renderScore(score));
-                }, index * delay);
-            });
+        socket.on('new_sus_score', (score) => {
+             renderScore(score);
         });
+
+        // Initial fetch
+        fetchSuspiciousScores();
 
         function getRankColor(rank) {
             const colors = {
@@ -657,9 +648,6 @@
             if (modFilter && !modsString.includes(modFilter)) return;
             if (userFilter && username.toLowerCase() !== userFilter && userId.toString() !== userFilter) return;
             if (mapFilter && !mapTitle.toLowerCase().includes(mapFilter) && !mapArtist.toLowerCase().includes(mapFilter)) return;
-
-            const scrollPos = window.scrollY;
-            const isScrolledDown = scrollPos > 20;
 
             const card = document.createElement('div');
             card.className = 'score-card';
@@ -726,15 +714,6 @@
             `;
 
             feed.insertBefore(card, feed.firstChild);
-
-            if (isScrolledDown) {
-                const cardHeight = 120 + 16;
-                window.scrollTo(0, scrollPos + cardHeight);
-            }
-
-            if (feed.children.length > MAX_ITEMS) {
-                feed.removeChild(feed.lastChild);
-            }
         }
     </script>
 </body>
